src/widgets/kernel/qwidget.cpp
@@ -1470,8 +1470,10 @@ void QWidgetPrivate::create_sys(WId window, bool initializeWindow, bool destroyO
         QWindowPrivate::WindowFrameInclusive : QWindowPrivate::WindowFrameExclusive;
     win->create();
     // Enable nonclient-area events for QDockWidget and other NonClientArea-mouse event processing.
-    if ((flags & Qt::Desktop) == Qt::Window)
-        win->handle()->setFrameStrutEventsEnabled(true);
+    if ((flags & Qt::Desktop) == Qt::Window) {
+        if (QPlatformWindow *platformWindow = win->handle())
+            platformWindow->setFrameStrutEventsEnabled(true);
+    }
 
     data.window_flags = win->flags();
 
